--- a/header.html
+++ b/header.html
@@ -3,92 +3,92 @@
   <div class="container topbar">
     <nav class="main-nav">
       <img src="logo.png" alt="Relax Logo" class="nav-logo" />
-      <a href="#" class="active">Головна</a>
+      <a href="index.html" class="active">Головна</a>
 
-<!-- Кнопка Фільми з випадаючим меню -->
+<!-- === МЕНЮ ФІЛЬМИ === -->
 <div class="dropdown">
   <a href="#" class="menu-films">Фільми</a>
   <div class="mega-menu">
     <div class="genres">
-      <a href="#" class="genre-link" data-genre="Біографія">Біографія</a>
-      <a href="#" class="genre-link" data-genre="Бойовик">Бойовик</a>
-      <a href="#" class="genre-link" data-genre="Вестерн">Вестерн</a>
-      <a href="#" class="genre-link" data-genre="Військовий">Військовий</a>
-      <a href="#" class="genre-link" data-genre="Детектив">Детектив</a>
-      <a href="#" class="genre-link" data-genre="Документальний">Документальний</a>
-      <a href="#" class="genre-link" data-genre="Драма">Драма</a>
-      <a href="#" class="genre-link" data-genre="Історія">Історія</a>
-      <a href="#" class="genre-link" data-genre="Комедія">Комедія</a>
-      <a href="#" class="genre-link" data-genre="Кримінал">Кримінал</a>
-      <a href="#" class="genre-link" data-genre="Мелодрама">Мелодрама</a>
-      <a href="#" class="genre-link" data-genre="Містика">Містика</a>
-      <a href="#" class="genre-link" data-genre="Музика">Музика</a>
-      <a href="#" class="genre-link" data-genre="Мюзикл">Мюзикл</a>
-      <a href="#" class="genre-link" data-genre="Пригоди">Пригоди</a>
-      <a href="#" class="genre-link" data-genre="Сімейний">Сімейний</a>
-      <a href="#" class="genre-link" data-genre="Спорт">Спорт</a>
-      <a href="#" class="genre-link" data-genre="Трилер">Трилер</a>
-      <a href="#" class="genre-link" data-genre="Жахи">Жахи</a>
-      <a href="#" class="genre-link" data-genre="Фантастика">Фантастика</a>
-      <a href="#" class="genre-link" data-genre="Фентезі">Фентезі</a>
-      <a href="#" class="genre-link" data-genre="Короткометражні">Короткометражні</a>
+      <a href="category.html?type=Фільм&genre=Біографія">Біографія</a>
+      <a href="category.html?type=Фільм&genre=Бойовик">Бойовик</a>
+      <a href="category.html?type=Фільм&genre=Вестерн">Вестерн</a>
+      <a href="category.html?type=Фільм&genre=Військовий">Військовий</a>
+      <a href="category.html?type=Фільм&genre=Детектив">Детектив</a>
+      <a href="category.html?type=Фільм&genre=Документальний">Документальний</a>
+      <a href="category.html?type=Фільм&genre=Драма">Драма</a>
+      <a href="category.html?type=Фільм&genre=Історія">Історія</a>
+      <a href="category.html?type=Фільм&genre=Комедія">Комедія</a>
+      <a href="category.html?type=Фільм&genre=Кримінал">Кримінал</a>
+      <a href="category.html?type=Фільм&genre=Мелодрама">Мелодрама</a>
+      <a href="category.html?type=Фільм&genre=Містика">Містика</a>
+      <a href="category.html?type=Фільм&genre=Музика">Музика</a>
+      <a href="category.html?type=Фільм&genre=Мюзикл">Мюзикл</a>
+      <a href="category.html?type=Фільм&genre=Пригоди">Пригоди</a>
+      <a href="category.html?type=Фільм&genre=Сімейний">Сімейний</a>
+      <a href="category.html?type=Фільм&genre=Спорт">Спорт</a>
+      <a href="category.html?type=Фільм&genre=Трилер">Трилер</a>
+      <a href="category.html?type=Фільм&genre=Жахи">Жахи</a>
+      <a href="category.html?type=Фільм&genre=Фантастика">Фантастика</a>
+      <a href="category.html?type=Фільм&genre=Фентезі">Фентезі</a>
+      <a href="category.html?type=Фільм&genre=Короткометражні">Короткометражні</a>
     </div>
   </div>
 </div>
 
-<!-- === МЕНЮ "СЕРІАЛИ" === -->
+<!-- === МЕНЮ СЕРІАЛИ === -->
 <div class="dropdown">
   <a href="#" class="menu-series">Серіали</a>
   <div class="mega-menu mega-series">
     <div class="genres">
-      <a href="#">Мелодраматичні</a>
-      <a href="#">Детективні</a>
-      <a href="#">Драматичні</a>
-      <a href="#">Комедійні</a>
-      <a href="#">Історичні</a>
-      <a href="#">Фантастичні</a>
-      <a href="#">Турецькі</a>
-      <a href="#">Пригодницькі</a>
-      <a href="#">Трилери (серіали)</a>
-      <a href="#">Жахи (серіали)</a>
-      <a href="#">Дорами</a>
-      <a href="#">Міні серіали</a>
+      <a href="category.html?type=Серіал&genre=Мелодраматичні">Мелодраматичні</a>
+      <a href="category.html?type=Серіал&genre=Детективні">Детективні</a>
+      <a href="category.html?type=Серіал&genre=Драматичні">Драматичні</a>
+      <a href="category.html?type=Серіал&genre=Комедійні">Комедійні</a>
+      <a href="category.html?type=Серіал&genre=Історичні">Історичні</a>
+      <a href="category.html?type=Серіал&genre=Фантастичні">Фантастичні</a>
+      <a href="category.html?type=Серіал&genre=Турецькі">Турецькі</a>
+      <a href="category.html?type=Серіал&genre=Пригодницькі">Пригодницькі</a>
+      <a href="category.html?type=Серіал&genre=Трилери">Трилери (серіали)</a>
+      <a href="category.html?type=Серіал&genre=Жахи">Жахи (серіали)</a>
+      <a href="category.html?type=Серіал&genre=Дорами">Дорами</a>
+      <a href="category.html?type=Серіал&genre=Міні серіали">Міні серіали</a>
     </div>
   </div>
 </div>
 
-      <!-- === МУЛЬТФІЛЬМИ === -->
+<!-- === МЕНЮ МУЛЬТФІЛЬМИ === -->
 <div class="dropdown">
   <a href="#" class="menu-cartoons">Мультфільми</a>
   <div class="mega-menu mega-cartoons">
     <div class="genres">
-      <a href="#">Всі мультики</a>
-      <a href="#">Повнометражні</a>
-      <a href="#">Короткометражні</a>
-      <a href="#">Мультсеріали</a>
-      <a href="#">Відомі мультсеріали</a>
-      <a href="#">Студії</a>
-      <a href="#">Netflix</a>
-      <a href="#">DreamWorks</a>
-      <a href="#">Pixar</a>
-      <a href="#">WB: Анімація</a>
-      <a href="#">Теми</a>
-      <a href="#">Для дорослих</a>
-      <a href="#">Про роботів</a>
-      <a href="#">Пластилінова анімація</a>
-      <a href="#">Новорічні</a>
+      <a href="category.html?type=Мультфільм&genre=Всі мультики">Всі мультики</a>
+      <a href="category.html?type=Мультфільм&genre=Повнометражні">Повнометражні</a>
+      <a href="category.html?type=Мультфільм&genre=Короткометражні">Короткометражні</a>
+      <a href="category.html?type=Мультфільм&genre=Мультсеріали">Мультсеріали</a>
+      <a href="category.html?type=Мультфільм&genre=Відомі мультсеріали">Відомі мультсеріали</a>
+      <a href="category.html?type=Мультфільм&genre=Студії">Студії</a>
+      <a href="category.html?type=Мультфільм&genre=Netflix">Netflix</a>
+      <a href="category.html?type=Мультфільм&genre=DreamWorks">DreamWorks</a>
+      <a href="category.html?type=Мультфільм&genre=Pixar">Pixar</a>
+      <a href="category.html?type=Мультфільм&genre=WB Анімація">WB: Анімація</a>
+      <a href="category.html?type=Мультфільм&genre=Теми">Теми</a>
+      <a href="category.html?type=Мультфільм&genre=Для дорослих">Для дорослих</a>
+      <a href="category.html?type=Мультфільм&genre=Про роботів">Про роботів</a>
+      <a href="category.html?type=Мультфільм&genre=Пластилінова анімація">Пластилінова анімація</a>
+      <a href="category.html?type=Мультфільм&genre=Новорічні">Новорічні</a>
     </div>
   </div>
 </div>
 
-      <a href="#">Новинки</a>
-      <a href="#">Збірки фільмів</a>
-    </nav>
+<a href="#">Новинки</a>
+<a href="#">Збірки фільмів</a>
+</nav>
 
-    <!-- Пошук + Мій кабінет -->
-    <div class="top-right">
-      <input type="text" placeholder="Пошук…" class="search" />
-      <button class="profile-btn">👑 Мій кабінет</button>
-    </div>
-  </div>
+<!-- === ПРАВА ЧАСТИНА === -->
+<div class="top-right">
+  <input type="text" placeholder="Пошук…" class="search" />
+  <button class="profile-btn">👑 Мій кабінет</button>
+</div>
+</div>
 </header>
