--- a/header.html
+++ b/header.html
@@ -3,35 +3,35 @@
   <div class="container topbar">
     <nav class="main-nav">
       <img src="logo.png" alt="Relax Logo" class="nav-logo" />
-      <a href="index.html" class="active">Головна</a>
+      <a href="/index.html" class="active">Головна</a>
 
 <!-- === МЕНЮ ФІЛЬМИ === -->
 <div class="dropdown">
   <a href="#" class="menu-films">Фільми</a>
   <div class="mega-menu">
     <div class="genres">
-      <a href="category.html?type=Фільм&genre=Біографія">Біографія</a>
-      <a href="category.html?type=Фільм&genre=Бойовик">Бойовик</a>
-      <a href="category.html?type=Фільм&genre=Вестерн">Вестерн</a>
-      <a href="category.html?type=Фільм&genre=Військовий">Військовий</a>
-      <a href="category.html?type=Фільм&genre=Детектив">Детектив</a>
-      <a href="category.html?type=Фільм&genre=Документальний">Документальний</a>
-      <a href="category.html?type=Фільм&genre=Драма">Драма</a>
-      <a href="category.html?type=Фільм&genre=Історія">Історія</a>
-      <a href="category.html?type=Фільм&genre=Комедія">Комедія</a>
-      <a href="category.html?type=Фільм&genre=Кримінал">Кримінал</a>
-      <a href="category.html?type=Фільм&genre=Мелодрама">Мелодрама</a>
-      <a href="category.html?type=Фільм&genre=Містика">Містика</a>
-      <a href="category.html?type=Фільм&genre=Музика">Музика</a>
-      <a href="category.html?type=Фільм&genre=Мюзикл">Мюзикл</a>
-      <a href="category.html?type=Фільм&genre=Пригоди">Пригоди</a>
-      <a href="category.html?type=Фільм&genre=Сімейний">Сімейний</a>
-      <a href="category.html?type=Фільм&genre=Спорт">Спорт</a>
-      <a href="category.html?type=Фільм&genre=Трилер">Трилер</a>
-      <a href="category.html?type=Фільм&genre=Жахи">Жахи</a>
-      <a href="category.html?type=Фільм&genre=Фантастика">Фантастика</a>
-      <a href="category.html?type=Фільм&genre=Фентезі">Фентезі</a>
-      <a href="category.html?type=Фільм&genre=Короткометражні">Короткометражні</a>
+      <a href="/category.html?type=Фільм&genre=Біографія">Біографія</a>
+      <a href="/category.html?type=Фільм&genre=Бойовик">Бойовик</a>
+      <a href="/category.html?type=Фільм&genre=Вестерн">Вестерн</a>
+      <a href="/category.html?type=Фільм&genre=Військовий">Військовий</a>
+      <a href="/category.html?type=Фільм&genre=Детектив">Детектив</a>
+      <a href="/category.html?type=Фільм&genre=Документальний">Документальний</a>
+      <a href="/category.html?type=Фільм&genre=Драма">Драма</a>
+      <a href="/category.html?type=Фільм&genre=Історія">Історія</a>
+      <a href="/category.html?type=Фільм&genre=Комедія">Комедія</a>
+      <a href="/category.html?type=Фільм&genre=Кримінал">Кримінал</a>
+      <a href="/category.html?type=Фільм&genre=Мелодрама">Мелодрама</a>
+      <a href="/category.html?type=Фільм&genre=Містика">Містика</a>
+      <a href="/category.html?type=Фільм&genre=Музика">Музика</a>
+      <a href="/category.html?type=Фільм&genre=Мюзикл">Мюзикл</a>
+      <a href="/category.html?type=Фільм&genre=Пригоди">Пригоди</a>
+      <a href="/category.html?type=Фільм&genre=Сімейний">Сімейний</a>
+      <a href="/category.html?type=Фільм&genre=Спорт">Спорт</a>
+      <a href="/category.html?type=Фільм&genre=Трилер">Трилер</a>
+      <a href="/category.html?type=Фільм&genre=Жахи">Жахи</a>
+      <a href="/category.html?type=Фільм&genre=Фантастика">Фантастика</a>
+      <a href="/category.html?type=Фільм&genre=Фентезі">Фентезі</a>
+      <a href="/category.html?type=Фільм&genre=Короткометражні">Короткометражні</a>
     </div>
   </div>
 </div>
@@ -41,18 +41,18 @@
   <a href="#" class="menu-series">Серіали</a>
   <div class="mega-menu mega-series">
     <div class="genres">
-      <a href="category.html?type=Серіал&genre=Мелодраматичні">Мелодраматичні</a>
-      <a href="category.html?type=Серіал&genre=Детективні">Детективні</a>
-      <a href="category.html?type=Серіал&genre=Драматичні">Драматичні</a>
-      <a href="category.html?type=Серіал&genre=Комедійні">Комедійні</a>
-      <a href="category.html?type=Серіал&genre=Історичні">Історичні</a>
-      <a href="category.html?type=Серіал&genre=Фантастичні">Фантастичні</a>
-      <a href="category.html?type=Серіал&genre=Турецькі">Турецькі</a>
-      <a href="category.html?type=Серіал&genre=Пригодницькі">Пригодницькі</a>
-      <a href="category.html?type=Серіал&genre=Трилери">Трилери (серіали)</a>
-      <a href="category.html?type=Серіал&genre=Жахи">Жахи (серіали)</a>
-      <a href="category.html?type=Серіал&genre=Дорами">Дорами</a>
-      <a href="category.html?type=Серіал&genre=Міні серіали">Міні серіали</a>
+      <a href="/category.html?type=Серіал&genre=Мелодраматичні">Мелодраматичні</a>
+      <a href="/category.html?type=Серіал&genre=Детективні">Детективні</a>
+      <a href="/category.html?type=Серіал&genre=Драматичні">Драматичні</a>
+      <a href="/category.html?type=Серіал&genre=Комедійні">Комедійні</a>
+      <a href="/category.html?type=Серіал&genre=Історичні">Історичні</a>
+      <a href="/category.html?type=Серіал&genre=Фантастичні">Фантастичні</a>
+      <a href="/category.html?type=Серіал&genre=Турецькі">Турецькі</a>
+      <a href="/category.html?type=Серіал&genre=Пригодницькі">Пригодницькі</a>
+      <a href="/category.html?type=Серіал&genre=Трилери">Трилери (серіали)</a>
+      <a href="/category.html?type=Серіал&genre=Жахи">Жахи (серіали)</a>
+      <a href="/category.html?type=Серіал&genre=Дорами">Дорами</a>
+      <a href="/category.html?type=Серіал&genre=Міні серіали">Міні серіали</a>
     </div>
   </div>
 </div>
@@ -62,21 +62,21 @@
   <a href="#" class="menu-cartoons">Мультфільми</a>
   <div class="mega-menu mega-cartoons">
     <div class="genres">
-      <a href="category.html?type=Мультфільм&genre=Всі мультики">Всі мультики</a>
-      <a href="category.html?type=Мультфільм&genre=Повнометражні">Повнометражні</a>
-      <a href="category.html?type=Мультфільм&genre=Короткометражні">Короткометражні</a>
-      <a href="category.html?type=Мультфільм&genre=Мультсеріали">Мультсеріали</a>
-      <a href="category.html?type=Мультфільм&genre=Відомі мультсеріали">Відомі мультсеріали</a>
-      <a href="category.html?type=Мультфільм&genre=Студії">Студії</a>
-      <a href="category.html?type=Мультфільм&genre=Netflix">Netflix</a>
-      <a href="category.html?type=Мультфільм&genre=DreamWorks">DreamWorks</a>
-      <a href="category.html?type=Мультфільм&genre=Pixar">Pixar</a>
-      <a href="category.html?type=Мультфільм&genre=WB Анімація">WB: Анімація</a>
-      <a href="category.html?type=Мультфільм&genre=Теми">Теми</a>
-      <a href="category.html?type=Мультфільм&genre=Для дорослих">Для дорослих</a>
-      <a href="category.html?type=Мультфільм&genre=Про роботів">Про роботів</a>
-      <a href="category.html?type=Мультфільм&genre=Пластилінова анімація">Пластилінова анімація</a>
-      <a href="category.html?type=Мультфільм&genre=Новорічні">Новорічні</a>
+      <a href="/category.html?type=Мультфільм&genre=Всі мультики">Всі мультики</a>
+      <a href="/category.html?type=Мультфільм&genre=Повнометражні">Повнометражні</a>
+      <a href="/category.html?type=Мультфільм&genre=Короткометражні">Короткометражні</a>
+      <a href="/category.html?type=Мультфільм&genre=Мультсеріали">Мультсеріали</a>
+      <a href="/category.html?type=Мультфільм&genre=Відомі мультсеріали">Відомі мультсеріали</a>
+      <a href="/category.html?type=Мультфільм&genre=Студії">Студії</a>
+      <a href="/category.html?type=Мультфільм&genre=Netflix">Netflix</a>
+      <a href="/category.html?type=Мультфільм&genre=DreamWorks">DreamWorks</a>
+      <a href="/category.html?type=Мультфільм&genre=Pixar">Pixar</a>
+      <a href="/category.html?type=Мультфільм&genre=WB Анімація">WB: Анімація</a>
+      <a href="/category.html?type=Мультфільм&genre=Теми">Теми</a>
+      <a href="/category.html?type=Мультфільм&genre=Для дорослих">Для дорослих</a>
+      <a href="/category.html?type=Мультфільм&genre=Про роботів">Про роботів</a>
+      <a href="/category.html?type=Мультфільм&genre=Пластилінова анімація">Пластилінова анімація</a>
+      <a href="/category.html?type=Мультфільм&genre=Новорічні">Новорічні</a>
     </div>
   </div>
 </div>
