--- a/category.html
+++ b/category.html
@@ -11,14 +11,26 @@
     h1 {
       text-align: center;
       font-size: 2rem;
-      font-weight: 800;
-      letter-spacing: 1px;
+      font-weight: 700;
+      color: #f5f5f5;
       margin-top: 25px;
-      background: linear-gradient(90deg, #cfcfcf, #9e9e9e, #e0e0e0);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.6);
+      position: relative;
+      display: inline-block;
+      padding-bottom: 5px;
     }
+    h1::after {
+      content: "";
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 0;
+      width: 60%;
+      height: 2px;
+      background: linear-gradient(90deg, transparent, #00fff2, transparent);
+      box-shadow: 0 0 6px #00fff2;
+      border-radius: 2px;
+    }
+
 
     .film-grid {
       display: grid;
